# Orbit

./: .gitignore  proyecto.txt  pyproject.toml  requirements-dev.txt  requirements.txt
config/: example.json  orbit.json
examples/: test_plugin.py  test_scheduler.py  test_weather.py
orbit/: __init__.py  __main__.py
orbit.egg-info/: PKG-INFO  SOURCES.txt
orbit/core/: __init__.py  cache.py  config.py  events.py  logger.py  plugin.py  scheduler.py  utils.py
orbit/plugins/calendar/: models.py  plugin.py  service.py
orbit/plugins/music/: models.py  plugin.py  service.py
orbit/plugins/system/: models.py  plugin.py  service.py
orbit/plugins/tasks/: models.py  plugin.py  service.py
orbit/plugins/weather/: models.py  plugin.py  service.py
tests/: test_cache.py  test_calendar.py  test_config.py  test_events.py  test_logger.py  test_main.py  test_music.py  test_plugin.py  test_system.py  test_tasks.py  test_utils.py  test_weather.py
